<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/big_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_common"
            android:background="@color/gray_light"
            android:gravity="center"
            android:paddingBottom="@dimen/common_padding"
            android:paddingTop="@dimen/common_padding"
            android:text="@string/pending_" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/small"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/view_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                style="@style/small_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/common_padding"
                android:paddingTop="@dimen/common_padding"
                android:singleLine="true"
                android:text="@string/client" />

            <TextView
                style="@style/small_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/common_padding"
                android:paddingTop="@dimen/common_padding"
                android:singleLine="true"
                android:text="@string/services" />

            <TextView
                style="@style/small_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/common_padding"
                android:paddingTop="@dimen/common_padding"
                android:singleLine="true"
                android:text="@string/nr_income" />

            <TextView
                style="@style/small_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/common_padding"
                android:paddingTop="@dimen/common_padding"
                android:singleLine="true"
                android:text="@string/mr_income" />

            <TextView
                style="@style/small_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/common_padding"
                android:paddingTop="@dimen/common_padding"
                android:singleLine="true"
                android:text="@string/Est_install" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/small"
            android:background="@drawable/view_black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/lstIstallPending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/loFooter"
                android:divider="@color/gray"
                android:dividerHeight="@dimen/small" />

            <TextView
                android:id="@+id/lblNoDataIP"
                style="@style/normal_text"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:singleLine="true" />


        </RelativeLayout>
    </LinearLayout>

    <include
        layout="@layout/loading_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>